# canary-full-client-editor

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
src/: CMakeLists.txt
src/protobuf/: CMakeLists.txt  map.proto  shared.proto
